--- a/411RTOP2.HTML
+++ b/411RTOP2.HTML
@@ -24,7 +24,15 @@
 
 <div class="row">
   <div class="column side">
-    <img src="TP1.png" width="300px" height="300px" >
+    <h2>school history</h2>
+    <P>The business school was established in the 1960s and was initially a small 
+      research institution aimed at cultivating the abilities of future business leaders. 
+      In the following decades, the school continued to expand and became one of the most 
+      famous business schools in Australia. Schools are not only committed to providing high-quality
+       education, but also play an important role in the business sector, making outstanding 
+       contributions to the community. Today, the school has modern facilities and a professional
+        teaching staff, providing students with countless opportunities to realize their career
+         dreams and achieve success in the business field.</P>
   </div>
   
   <div class="column middle">
@@ -76,3 +84,4 @@
   
 </body>
 </html>
+
