--- a/411RTO.HTML
+++ b/411RTO.HTML
@@ -9,7 +9,8 @@
 <body>
 
 <div class="header">
-  <h1>Home page</h1>
+  <h1>GBA</h1>
+  <h1>GLOBA BUSINESS ACADEMY</h1>
   <h2>Robin</h2>
 </div>
 
@@ -31,15 +32,14 @@
   
   <div class="column middle">
     <h2>brief</h2>
-    <p>As of August 2022, the campus area of the school is 460.19 hectares,
-       with a building area of 3.0332 million square meters and a total collection
-        of 5.6587 million books; It has 21 colleges, 59 teaching departments, and
-         offers 88 undergraduate majors; There are 50 postdoctoral research mobile
-          stations, 22 national key disciplines in first level disciplines, and 63 
-          doctoral and master's degree authorization points in first level disciplines;
-           There are 16270 faculty members and 59270 students on campus, including 16320
-            undergraduate students, 22423 master's students, 20527 doctoral students, and 
-            1001 students from Hong Kong, Macao, and Taiwan.</p>
+    <p>Our courses cover a broad range of topics, including finance, marketing,
+       management, entrepreneurship, and more. We equip students with the tools they
+        need to analyze market trends, make strategic decisions, and develop innovative 
+        solutions to business challenges.</p><br>
+    <p>At our business school, we offer a wide range of courses designed to prepare students 
+      for the dynamic and complex world of business. Our curriculum is rooted in real-world experiences
+      , and our expert faculty brings a wealth of knowledge from various industries to the classroom.</p>    
+
        <div align="center">
   </div>
   </div>
@@ -54,7 +54,7 @@
           <td>contact information</td>
         </tr>
         <tr>
-          <td>Located in Haidian District, Beijing</td>
+          <td>23 Herring Road, Macquarie Park, NSW 2113, Australia</td>
           <td>010-62770334</td>
         </tr>
       </tbody>
