--- a/411RTOP4.HTML
+++ b/411RTOP4.HTML
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>452CSSPAGE1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="411RTOP4.CSS">
+<link rel="stylesheet" href="411RTOP4.CSS">
 </head>
 <body>
 
@@ -13,14 +13,14 @@
 </div>
 
 <nav>
-          <ul>
-            <li><a href="411RTO.HTML">Home page</a></li>
-            <li><a href="411RTOP2.HTML"> About us</a></li>
-            <li><a href="411RTOP3.HTML">Course details</a></li>
-            <li><a href="411RTOP4.HTML"> enquiry form</a></li>
-            <li><a href="411RTOP5.HTML">google maps</a></li>
-          </ul>
-      </nav>
+   <ul>
+     <li><a href="411RTO.HTML">Home page</a></li>
+     <li><a href="411RTOP2.HTML"> About us</a></li>
+     <li><a href="411RTOP3.HTML">Course details</a></li>
+     <li><a href="411RTOP4.HTML"> enquiry form</a></li>
+     <li><a href="411RTOP5.HTML">google maps</a></li>
+   </ul>
+</nav>
 
 <div class="row">
   <div class="column side">
@@ -30,23 +30,22 @@
   </div>
   
   <div class="column middle">
- <h1>Please enter your information</h1>
- <div align="center">
- <form>
-  <label for="name">name：</label><br>
-  <input type="text" id="name" name="name" placeholder="name"><br>
+    <div id="output"></div>
+    <h1>Please enter your information</h1>
+    <div align="center">
+      <form>
+        <label for="name">name：</label><br>
+        <input type="text" id="name" name="name" placeholder="name"><br>
 
-  <label for="phone">contact ：</label><br>
-  <input type="tel" id="phone" name="phone" placeholder="contact information"><br>
+        <label for="phone">contact：</label><br>
+        <input type="tel" id="phone" name="phone" placeholder="contact information"><br>
 
-  <label for="address">address：</label><br>
-  <input type="text" id="address" name="address" placeholder="address"><br>
+        <label for="address">address：</label><br>
+        <input type="text" id="address" name="address" placeholder="address"><br>
 
-  <input type="submit" value="submit">
-</div>
- </form>
-       <div align="center">
-  </div>
+        <input type="submit" value="submit">
+      </form>
+    </div>
   </div>
   
   <div class="column side">
@@ -58,7 +57,6 @@
 <div class="footer">
   <p>Enter your own information on this page</p>
 </div>
-
-  
+<script src="411RTOP4.JS"></script>
 </body>
 </html>
