--- a/411RTOP4.HTML
+++ b/411RTOP4.HTML
@@ -43,6 +43,12 @@
         <label for="address">address：</label><br>
         <input type="text" id="address" name="address" placeholder="address"><br>
 
+        <label for="fatherName">father's name：</label><br>
+        <input type="text" id="fatherName" name="fatherName" placeholder="father's name"><br>
+
+        <label for="motherName">mother's name：</label><br>
+        <input type="text" id="motherName" name="motherName" placeholder="mother's name"><br>
+
         <input type="submit" value="submit">
       </form>
     </div>
@@ -60,3 +66,4 @@
 <script src="411RTOP4.JS"></script>
 </body>
 </html>
+
